syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "user.proto";

message AuthStatusRequest {
}

message AuthAuthenticateRequest {
  string username = 1;
  string password = 2;
}

service AuthService {
  rpc Status (AuthStatusRequest) returns (AuthStatusResponse) {
    option (google.api.http) = {
      get: "/api/v1/auth/status"
      //body: "*"
    };}

  rpc Authenticate (AuthAuthenticateRequest) returns (AuthAuthenticateResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/authenticate"
      body: "*"
    };}
}

message AuthStatusResponse {
  UserResponse.User user = 1;
  bool is_root = 2;
}

message AuthAuthenticateResponse {
  string token = 1;
}
